Fixed move-around path logic

--- a/skate/index.html
+++ b/skate/index.html
@@ -733,11 +733,11 @@
     </div>
     
     <!-- Load modules in order -->
-    <script src="projects/js/skate_modules/storage.js"></script>
-    <script src="projects/js/skate_modules/api.js"></script>
-    <script src="projects/js/skate_modules/filters.js"></script>
-    <script src="projects/js/skate_modules/utils.js"></script>
-    <script src="projects/js/skate_modules/ui.js"></script>
+    <script src="projects/js/storage.js"></script>
+    <script src="projects/js/api.js"></script>
+    <script src="projects/js/filters.js"></script>
+    <script src="projects/js/utils.js"></script>
+    <script src="projects/js/ui.js"></script>
     
     <script>
         /**
