--- a/skate/index.html
+++ b/skate/index.html
@@ -11,7 +11,7 @@
     <div class="app" id="app">
         <!-- Top Bar -->
         <div class="top-bar">
-            <h1>⛸️ Toronto Skating</h1>
+            <h1>Toronto Skating</h1>
             <div class="top-bar-actions">
                 <span id="user-name" style="font-size:12px;color:var(--text-muted)"></span>
             </div>
@@ -277,9 +277,9 @@
                 const actLower = activity.toLowerCase();
                 let tag = '';
                 if (actLower.includes('shinny') || actLower.includes('hockey')) tag = '<span class="tag shinny">🏒 Shinny</span>';
-                else if (actLower.includes('figure')) tag = '<span class="tag figure">⛸️ Figure</span>';
-                else if (actLower.includes('speed')) tag = '<span class="tag speed">⚡ Speed</span>';
-                else if (actLower.includes('leisure')) tag = '<span class="tag leisure">🏂 Leisure</span>';
+                else if (actLower.includes('figure')) tag = '<span class="tag figure">Figure</span>';
+                else if (actLower.includes('speed')) tag = '<span class="tag speed">Speed</span>';
+                else if (actLower.includes('leisure')) tag = '<span class="tag leisure">Leisure</span>';
                 
                 // Happening now indicator
                 const happeningBadge = happeningSoon ? '<span class="happening-now">Starting Soon</span>' : '';
