Fix UI alignment issues

--- a/skate/index.html
+++ b/skate/index.html
@@ -17,7 +17,7 @@
                     <button class="btn-icon" id="btn-dark-mode" title="Toggle dark mode">🌙</button>
                     <span>Dark</span>
                 </label>
-                <span id="user-name" style="font-size:12px;color:var(--text-muted)"></span>
+                <span id="user-name" class="user-name"></span>
             </div>
         </div>
         
